force-app/main/default/objects/Measuring_Point__c/Measuring_Point__c.object-meta.xml
<CustomObject>
    <label>Measuring Point</label>
    <nameField>
        <displayFormat>MP-{000000}</displayFormat>
        <label>Measuring Point</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Measuring Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>