force-app/main/default/objects/Measuring_Point__c/fields/Counter_Reading__c.field-meta.xml
<CustomField>
    <fullName>Counter_Reading__c</fullName>
    <label>Counter Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>