force-app/main/default/objects/Measuring_Point__c/fields/Measure_Point__c.field-meta.xml
<CustomField>
    <fullName>Measure_Point__c</fullName>
    <label>Measure Point</label>
    <length>10</length>
    <type>Text</type>
</CustomField>