force-app/main/default/objects/Measuring_Point__c/fields/Measure_Point_Unit__c.field-meta.xml
<CustomField>
    <fullName>Measure_Point_Unit__c</fullName>
    <label>Measure Point Unit</label>
    <length>5</length>
    <type>Text</type>
</CustomField>